fixed spelling error -shepherd's pie-

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Recepten</h1>
     <ul><a href="recepten/vegan_carbonara.html">Vegan Carbonara</a>
         <a href="recepten/vegan_paella.html">Vegan Carbonara</a>
-        <a href="recepten/vegan_sheppards_pie.html">Vegan Carbonara</a>
+        <a href="recepten/vegan_shepherd's_pie.html">Vegan Carbonara</a>
      </ul>
 </body>
 </html>
