veg_carb inhoud

--- a/recepten/vegan_carbonara.html
+++ b/recepten/vegan_carbonara.html
@@ -1,1 +1,11 @@
 <h1>Vegan Carbonara</h1>
+<img scr="/home/fs/repos/Recepten/images/Vegan-Carbonara-13.jpg" alt="Vegan Carbonara"> 
+<h3>Ingredienten</h3>
+<uo>
+    <li>lorem</li>
+    <li>lorem</li>
+    <li>lorem</li>
+</uo>
+<h3>Bereiding</h3>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque praesentium facere eos? Fugiat, possimus sapiente, suscipit officiis nisi voluptas a aspernatur laborum earum mollitia eligendi beatae exercitationem deserunt eius perspiciatis./p>
+    
